# sca_smartkey

./: .gitignore  README.md  requirements.txt
docs/sequence_diagrams/: auth_flow.puml  relay_attack.puml
firmware/: platformio.ini
firmware/lib/mbedtls_wrapper/: hmac_wrapper.cpp  hmac_wrapper.h
firmware/src/: access_controller.cpp  access_controller.h  auth_engine.cpp  auth_engine.h  ble_manager.cpp  ble_manager.h  config.h  gpio_actuator.cpp  gpio_actuator.h  main.cpp  nfc_manager.cpp  nfc_manager.h  uwb_manager.cpp  uwb_manager.h
simulator/: attack_sim.py  ble_sim.py  full_demo.py  nfc_sim.py  phone_sim.py  sca_common.py  uwb_sim.py  vehicle_sim.py
tests/: CMakeLists.txt  test_auth.cpp  test_python_auth.py  test_state_machine.cpp
